# GIF-Converstion-Microservice

./: .env.example  Dockerfile  README copy.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: routes.py
app/: .env  main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: video_processor.py
app/utils/: apify_client.py  gcs_client.py  video_utils.py  youtube_client.py
core/: config.py
model/: schemas.py
services/: video_processor.py
utils/: apify_client.py  gcs_client.py  video_utils.py  youtube_client.py
